Fix incorrect naming of a breakpoint, Whitespace consistency changes in _variables

--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -90,10 +90,10 @@ $grid-padding:                 2%
 
 // Loaders
 
-$loader-large: 48px
-$loader: 32px
-$loader-small: 16px
-$loader-smallest: 9px
+$loader-large:                 48px
+$loader:                       32px
+$loader-small:                 16px
+$loader-smallest:              9px
 
 // Forms
 
@@ -113,7 +113,7 @@ $tablet:                       1080px
 $phablet:                      860px
 $phablet-handheld:             780px
 $handheld:                     667px
-$handheld-landscape:           334px
+$handheld-portrait:            334px
 
 // Characters
 
